[gd_scene load_steps=4 format=3 uid="uid://w0u7j23cql36"]

[ext_resource type="StyleBox" uid="uid://d32ynww7y148n" path="res://gui/statstyle.tres" id="1_dpobf"]
[ext_resource type="Script" uid="uid://08qvku1augfw" path="res://miniquests/miniquest_gui.gd" id="1_ehxuy"]
[ext_resource type="FontFile" uid="uid://csuju232u5qsn" path="res://art/PixelatedEleganceRegular-ovyAA.ttf" id="2_ehxuy"]

[node name="Miniquest" type="CanvasLayer"]
script = ExtResource("1_ehxuy")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -75.0
offset_right = 300.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_dpobf")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="QuestText" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ehxuy")
theme_override_font_sizes/font_size = 40
text = "Quest: Squish 5 Forwarders"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="CritterIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="OkButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ehxuy")
theme_override_font_sizes/font_size = 20
text = "OK"

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
